postgresql-common (206) UNRELEASED; urgency=medium

  * t/135_pg_virtualenv.t: Run pg_virtualenv on all versions.
  * gitlab/gitlab-ci.yml: Include salsa-ci pipeline instead of our own.

 -- Christoph Berg <myon@debian.org>  Tue, 13 Aug 2019 11:17:09 +0200

postgresql-common (205) unstable; urgency=medium

  * Disable plpython2 packages by default. (Closes: #937310)
  * testsuite: Prefer PgCommon.pm from current directory.
  * pgcommon.sh: Remove obsolete Ubuntu code in locale_gen function.
  * Drop lsb-release dependencies, we prefer /etc/os-release anyway.
  * apt.postgresql.org.sh: Parse VERSION_CODENAME in /etc/os-release.

 -- Christoph Berg <myon@debian.org>  Wed, 04 Sep 2019 08:38:08 +0200

postgresql-common (204) unstable; urgency=medium

  * dh_installinit: Add -ppostgresql-common to work around debhelper #932073.
  * dh_make_pgxs: Add debian/watch template (with a github pattern).
  * pgdg/apt.postgresql.org.sh: Add options to choose PostgreSQL version, and
    to optionally install packages automatically.
  * Move pg_buildext from postgresql-server-dev-all to postgresql-common. Many
    use-cases do not need the header files and compiler dependencies
    installed.
  * debian/supported-versions: Use PG11 on Bullseye.
  * pg_virtualenv: Write temporary password file before chowning the file.
    (Closes: #933569)

 -- Christoph Berg <myon@debian.org>  Thu, 08 Aug 2019 12:48:00 +0200

postgresql-common (203) unstable; urgency=medium

  DATA LOSS WARNING: pg_upgradecluster from postgresql-common 200 .. 202 will
  corrupt the data_directory setting when used *twice* to upgrade a cluster
  (e.g. 9.6 -> 10 -> 11). This update fixes the original problem, and also
  heals affected clusters on the next upgrade. No additional steps are required.

  https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=931635

  * pg_createcluster: Allow clusters with owner gid 0. (salsa-ci uses that.)
  * pg_createcluster: If there are --auth options in createcluster.conf's